src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__reassign_superclass.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/reassign_superclass.lox
---
Base.method()
Base.method()
