src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__super_at_top_level.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/super_at_top_level.lox
---
Resolver error(s):
[ line 1 ] : Can't use 'super' outside of a class.
[ line 2 ] : Can't use 'super' outside of a class.
