src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__super_in_inherited_method.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/super_in_inherited_method.lox
---
A
