src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__super_without_dot.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/super_without_dot.lox
---
Syntax error(s):
[ line 6 ] : Expect 'Dot'.
[ line 7 ] : Expect expression.
