src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__super_without_name.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/super_without_name.lox
---
Syntax error(s):
[ line 5 ] : Expect 'Identifier'.
[ line 6 ] : Expect expression.
