src/interpreter/snapshots/rlox__interpreter__tests__interpreter@super__this_in_superclass_method.lox.snap
---
source: src/interpreter/mod.rs
expression: output
input_file: test_programs/interpreter/super/this_in_superclass_method.lox
---
a
b
